Fix menu item spacing to be evenly distributed
- Home: 10px
- About: 60px (50px gap)
- Services: 120px (60px gap)
- Contact: 180px (60px gap)

--- a/css/style.css
+++ b/css/style.css
@@ -91,16 +91,16 @@ img {
 	padding: 0 28px 0 10px;
 }
 #navigation div ul li a.about {
-	padding: 0 28px 0 55px;
+	padding: 0 28px 0 60px;
 }
 #navigation div ul li a.services {
-	padding: 0 28px 0 110px;
+	padding: 0 28px 0 120px;
 }
 #navigation div ul li a.blog {
 	padding: 0 28px 0 140px;
 }
 #navigation div ul li a.contact {
-	padding: 0 28px 0 80px;
+	padding: 0 28px 0 180px;
 }
 
 /* Dropdown Menu Styles */
